[package]
name = "heir"
repository = "https://github.com/gensengcom/heir"
description = "A feature-rich intermediate representation for poker hands."
authors = ["Race Williams <race@genseng.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
transpiler = ["transpiler"]
cfr = ["cfr"]
handgen = ["handgen"]

[dependencies]
transpiler = { path = "transpiler", optional = true }
cfr = { path = "cfr", optional = true }
handgen = { path = "handgen", optional = true }
