[package]
name = "heir"
repository = "https://github.com/gensengcom/heir"
description = "A feature-rich intermediate representation for poker hands."
authors = ["Race Williams <race@genseng.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.197", features = ["derive"] }
